Improved UI and code