@@ -1,9 +1,10 @@
 package com.ch.tusk.controllers;
 
+import com.ch.tusk.customnodes.AlertFX;
+import com.ch.tusk.customnodes.IconImageView;
 import com.ch.tusk.json.Constants;
 import com.ch.tusk.json.Json;
 import com.ch.tusk.main.MusicPlayerFX;
-import com.ch.tusk.mediaListPlayer.MediaListPlayer;
 import com.ch.tusk.mediaplayerutil.FileChooserManager;
 import com.ch.tusk.mediaplayerutil.FolderChooserManager;
 import com.ch.tusk.mediaplayerutil.StringFormatter;
@@ -19,6 +20,7 @@ import javafx.fxml.Initializable;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
+import javafx.scene.image.Image;
 import javafx.scene.layout.BorderPane;
 import javafx.stage.Stage;
 import uk.co.caprica.vlcj.medialist.MediaList;
@@ -31,7 +33,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.ResourceBundle;
-import java.util.stream.Collectors;
 
 public class MainSceneController implements Initializable {
 
@@ -62,6 +63,9 @@ public class MainSceneController implements Initializable {
 
     private Json json;
 
+    @FXML
+    private Button btnSearch, btnPlaylist, btnAlbum, btnSettings, btnTrack;
+
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         initialize();
@@ -69,6 +73,7 @@ public class MainSceneController implements Initializable {
 
     private void initialize() {
         loadPlaybackController();
+        setButtonIcons();
         initializeTreeView();
         setTreeViewListener();
         initializeGlobalVariables();
@@ -80,12 +85,39 @@ public class MainSceneController implements Initializable {
         json = new Json();
     }
 
+    /**
+     * This method sets the icons for the buttons in the application.
+     * It iterates over an array of buttons and assigns each button an icon from the /images/ directory.
+     * The icons are assigned in the order of the buttons in the array.
+     * The icon for each button is created as an ImageView with the preferred height and width of the button.
+     * The image for the ImageView is loaded from the /images/ directory, with the file name determined by the index of the button in the array plus 16.
+     * The loaded image is then set as the graphic for the button.
+     */
+    private void setButtonIcons() {
+        String path = "/images/";
+        Button[] buttons = {btnSearch, btnPlaylist, btnAlbum, btnTrack, btnSettings};
+
+        for (int i = 0; i < buttons.length; i++) {
+            var imageView = new IconImageView(buttons[i].getPrefHeight(), buttons[i].getPrefWidth());
+
+            imageView.setImage(new Image(Objects.requireNonNull(getClass().getResourceAsStream(path + (i + 16) + ".png"))));
+            buttons[i].setGraphic(imageView);
+        }
+    }
+
+
+    /**
+     * This method is responsible for loading the playback controller.
+     * It uses the FXMLLoader to load the FXML file for the playback bar.
+     * The loaded FXML file is then set as the bottom component of the border pane.
+     * The controller for the loaded FXML file is retrieved and stored in a constant for future use.
+     * If an IOException occurs during this process, it is ignored.
+     */
     private void loadPlaybackController() {
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/playbackBar.fxml"));
 
             Parent playbackBarRoot = loader.load();
-            // Assuming you have a root container like BorderPane in your current FXML
             borderPane.setBottom(playbackBarRoot);
 
             // Now get the controller
@@ -95,7 +127,7 @@ public class MainSceneController implements Initializable {
     }
 
     private void initializeTreeView() {
-        TreeItem<String> root = new TreeItem<>("My playlists");
+        TreeItem<String> root = new TreeItem<>("My Albums");
         mediaTreeView.setRoot(root);
         Platform.runLater(() -> {
             ScrollBar verticalBar = (ScrollBar) mediaTreeView.lookup(".scroll-bar:vertical");
@@ -106,6 +138,14 @@ public class MainSceneController implements Initializable {
         });
     }
 
+    /**
+     * This method sets a listener for mouse press events on the mediaTreeView.
+     * The listener performs several actions when a leaf node (representing a song) is selected:
+     * 1. If the selected song is currently playing, it seeks to the start of the song and aborts further actions.
+     * 2. If the selected song is not in the current playlist, it loads the playlist that contains the selected song.
+     * 3. If a song is currently playing, it stops the playback.
+     * 4. Finally, it starts playing the selected song.
+     */
     private void setTreeViewListener() {
         // Keep in mind that the order of the branches corresponds to the order of the MediaListRefs
         mediaTreeView.setOnMousePressed(event -> {
@@ -139,12 +179,19 @@ public class MainSceneController implements Initializable {
             }
 
             playSelectedItem(selectedItem.getValue());
-
-
         });
-
     }
 
+    /**
+     * This method is used to load a playlist into the media player.
+     * It first finds the index of the parent of the selected item in the tree view.
+     * Then, it creates a new playlist and loads the album at the found index from a JSON file.
+     * It adds all songs from the loaded album to the playlist.
+     * After the playlist is ready, it sets the playlist to the media player and releases the resources.
+     *
+     * @param selectedItem The selected item in the tree view.
+     * @param allChildren  All children of the root node in the tree view.
+     */
     private void loadPlaylist(TreeItem<String> selectedItem, ObservableList<TreeItem<String>> allChildren) {
         int index = allChildren.indexOf(selectedItem.getParent());
 
@@ -154,9 +201,7 @@ public class MainSceneController implements Initializable {
         ArrayList<Album> albums = json.loadAlbumArrayFromJson(Constants.ALBUM_JSON_LOCATION);
         Album selectedAlbum = albums.get(index);
 
-        for (String songMrl : selectedAlbum.songs()) {
-            mediaList.media().add(songMrl);
-        }
+        selectedAlbum.songs().forEach(songMrl -> mediaList.media().add(songMrl));
 
         // Playlist is ready
         MediaListRef mediaListRef = mediaList.newMediaListRef();
@@ -169,18 +214,30 @@ public class MainSceneController implements Initializable {
         mediaListRef.release();
     }
 
+    /**
+     * This method is used to play a selected item in the media player.
+     * It first matches the selected item to a media reference in the media player.
+     * Then, it plays the matched media reference.
+     * Finally, it updates the status label in the playback controller to "Playing...".
+     *
+     * @param selectedItem The selected item to be played.
+     */
     private void playSelectedItem(String selectedItem) {
         Constants.MEDIA_LIST_PLAYER.play(Constants.MEDIA_LIST_PLAYER.matchReference(selectedItem));
         Constants.PLAYBACK_CONTROLLER.setLblStatus("Playing...");
     }
 
+    /**
+     * This method checks if the current playlist contains the selected item.
+     * It uses the Java 8 Stream API to iterate over the current playlist and checks if any of the media resource locators (MRLs) match the selected item.
+     * The matching is done by comparing the file name extracted from the MRL with the selected item.
+     *
+     * @param currentPlaylistMrl A list of MRLs in the current playlist.
+     * @param selectedItem       The selected item to be checked if it's in the playlist.
+     * @return true if the selected item is in the playlist, false otherwise.
+     */
     private boolean playlistContainsSelectedItem(List<String> currentPlaylistMrl, String selectedItem) {
-        for (String s : currentPlaylistMrl) {
-            if (StringFormatter.getFileNameFromMrl(s).equals(selectedItem)) {
-                return true;
-            }
-        }
-        return false;
+        return currentPlaylistMrl.stream().anyMatch(mrl -> StringFormatter.getFileNameFromMrl(mrl).equals(selectedItem));
     }
 
     public TreeView<String> getMediaTreeView() {
@@ -251,73 +308,104 @@ public class MainSceneController implements Initializable {
         return filePath;
     }
 
-    public void openFolder() {
-        openFolder(folderChooserManager.showFolderChooser((Stage) borderPane.getScene().getWindow()));
+    public void addMusicFolder() {
+        addMusicFolder(folderChooserManager.showFolderChooser((Stage) borderPane.getScene().getWindow()));
     }
 
-    public void openFolder(String folderPath) {
+    /**
+     * This method is used to add a music folder to the application's music directories.
+     * It first loads the current status from a JSON file, then tries to add the provided folder path to the music folders.
+     * If the folder path is successfully added (i.e., it was not already present), it writes the updated status back to the JSON file and displays a success alert.
+     * If the folder path was not added (i.e., it was already present), it displays an error alert.
+     *
+     * @param folderPath The path of the folder to be added to the music directories.
+     */
+    public void addMusicFolder(String folderPath) {
+        // Load the current status from the JSON file
+        var status = json.loadStatusJson(Constants.STATUS_JSON_LOCATION);
 
+        // Try to add the provided folder path to the music folders
+        if (status.musicFolders().add(folderPath)) {
+            // If the folder path was successfully added, write the updated status back to the JSON file
+            json.writeStatusJSON(Constants.STATUS_JSON_LOCATION, status);
+
+            // Display a success alert
+            var success = new AlertFX(Alert.AlertType.INFORMATION, "Media Discovery", "A new folder has been successfully added to the music directories.",
+                    "Subsequent library creations will include this folder.", MusicPlayerFX.createCustomIcon());
+            success.show();
+        } else {
+            // If the folder path was not added (i.e., it was already present), display an error alert
+            var failure = new AlertFX(Alert.AlertType.ERROR, "Media Discovery", "The submitted folder was already registered.",
+                    "Please submit a valid folder.", MusicPlayerFX.createCustomIcon());
+            failure.show();
+        }
     }
 
-    private Alert setUpReloadingAlert() {
-        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
-        alert.setTitle("Media Discovery");
-        alert.setHeaderText("Reloading the entire library may take some time.");
-        alert.setContentText("Are you sure you want to proceed?");
-        alert.getDialogPane().setGraphic(MusicPlayerFX.createCustomIcon());
-        // Get the DialogPane and set its styles
-        alert.getDialogPane().getStylesheets().add(Objects.requireNonNull(getClass().getResource("/css/styles.css")).toExternalForm());
-        alert.getDialogPane().getStyleClass().add("styled-alert");
-        return alert;
-    }
 
     public void displayAlert() throws IOException {
 
-        Alert alert = setUpReloadingAlert();
+        var alert = new AlertFX(Alert.AlertType.CONFIRMATION, "Media Discovery", "Reloading the entire library may take some time.",
+                "Are you sure you want to proceed?", MusicPlayerFX.createCustomIcon());
 
-        if (alert.showAndWait().get() == ButtonType.OK) {
-            FXMLLoader loaderLoadingScreen = new FXMLLoader(getClass().getResource("/fxml/loadingScreen.fxml"));
-            Parent loadingRoot = loaderLoadingScreen.load();
-            Stage loadingStage = MusicPlayerFX.setUpLoadingStage(new Scene(loadingRoot));
+        alert.showAndWait().ifPresent(response -> {
+            if (response == ButtonType.OK) {
+                FXMLLoader loaderLoadingScreen = new FXMLLoader(getClass().getResource("/fxml/loadingScreen.fxml"));
+                Parent loadingRoot = null;
+                try {
+                    loadingRoot = loaderLoadingScreen.load();
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
+                }
+                Stage loadingStage = MusicPlayerFX.setUpLoadingStage(new Scene(loadingRoot));
 
-            Platform.runLater(() -> {
-                alert.close();
-                borderPane.setDisable(true);
-                Constants.MEDIA_LIST_PLAYER.clearPlaylist();
-                mediaTreeView.getRoot().getChildren().clear();
+                Platform.runLater(() -> {
+                    alert.close();
+                    borderPane.setDisable(true);
+                    Constants.MEDIA_LIST_PLAYER.clearPlaylist();
+                    mediaTreeView.getRoot().getChildren().clear();
 
-                Task<Void> backgroundTask = new Task<>() {
-                    @Override
-                    protected Void call() {
-                        extractJSON(json, Constants.MEDIA_LIST_PLAYER, mediaTreeView);
-                        return null;
-                    }
-                };
+                    Task<Void> backgroundTask = new Task<>() {
+                        @Override
+                        protected Void call() {
+                            extractJSON(json, mediaTreeView);
+                            return null;
+                        }
+                    };
 
-                backgroundTask.setOnSucceeded((WorkerStateEvent event) -> {
-                    borderPane.setDisable(false);
-                    loadingStage.close();
+                    backgroundTask.setOnSucceeded((WorkerStateEvent event) -> {
+                        borderPane.setDisable(false);
+                        loadingStage.close();
+                    });
+
+                    backgroundTask.setOnFailed((WorkerStateEvent event) -> {
+                        Throwable exception = backgroundTask.getException();
+                        if (exception != null) {
+                            System.out.println(exception);
+                        }
+                    });
+
+                    new Thread(backgroundTask).start();
                 });
+            }
 
-                backgroundTask.setOnFailed((WorkerStateEvent event) -> {
-                    Throwable exception = backgroundTask.getException();
-                    if (exception != null) {
-                        System.out.println(exception);
-                    }
-                });
-
-                new Thread(backgroundTask).start();
-            });
-        }
-
+        });
     }
 
-    public void extractJSON(Json json, MediaListPlayer mediaListPlayer, TreeView<String> mediaTreeView) {
+    /**
+     * This method is used to extract album data from a JSON file and load it into the media tree view.
+     * It first writes the album array to the JSON file. The album array is created from the media player's music directories,
+     * which are obtained from the status JSON file.
+     * Then, it loads the album array from the JSON file into the media tree view.
+     * The loading is done on the JavaFX Application thread to ensure that the UI is updated correctly.
+     *
+     * @param json          The Json object used to handle JSON operations.
+     * @param mediaTreeView The TreeView object that represents the media tree view in the UI.
+     */
+    public void extractJSON(Json json, TreeView<String> mediaTreeView) {
 
         try {
             json.writeAlbumArrayToJSON(json.createAlbumArray(Constants.MEDIA_LIST_PLAYER,
-                    json.obtainMusicDirectories(
-                            Constants.DEFAULT_MUSIC_FOLDER)
+                    json.obtainMusicDirectories(json.loadStatusJson(Constants.STATUS_JSON_LOCATION).musicFolders())
             ), Constants.ALBUM_JSON_LOCATION);
 
         } catch (IOException ignored) {
@@ -375,7 +463,7 @@ public class MainSceneController implements Initializable {
         return songs.stream()
                 .filter(song -> song.toLowerCase().contains(text))
                 .sorted(String.CASE_INSENSITIVE_ORDER)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void setFilteredSongsToUI(List<String> filteredSongs) {
